--- a/backend/package.json
+++ b/backend/package.json
@@ -5,7 +5,7 @@
   "main": "app.js",
   "type": "module",
   "scripts": {
-    "test": "jest",
+    "test": "node --experimental-vm-modules node_modules/jest/bin/jest.js --verbose --runInBand --detectOpenHandles --silent --force-exit",
     "dev": "nodemon app.js"
   },
   "author": "89675-Gil, 89768-Gutierrez, 97848-Witt",
@@ -18,9 +18,11 @@
     "express": "^4.19.2",
     "jsonwebtoken": "^9.0.2",
     "sequelize": "^6.37.3",
-    "sqlite3": "^5.1.7"
+    "sqlite3": "^5.1.7",
+    "winston": "^3.13.0"
   },
   "devDependencies": {
+    "jest": "^29.7.0",
     "nodemon": "^3.1.1",
     "supertest": "^7.0.0"
   }
