Añadir correcciones al logger

--- a/backend/package.json
+++ b/backend/package.json
@@ -5,7 +5,8 @@
   "main": "app.js",
   "type": "module",
   "scripts": {
-    "test": "node --experimental-vm-modules node_modules/jest/bin/jest.js --verbose --runInBand --detectOpenHandles --silent --force-exit",
+    "test": "jest",
+    "test:watch": "npm run test -- --watch",
     "dev": "nodemon app.js"
   },
   "author": "89675-Gil, 89768-Gutierrez, 97848-Witt",
