Tests unitarios para Clasificaciones, Géneros y Películas

--- a/backend/package.json
+++ b/backend/package.json
@@ -5,12 +5,17 @@
   "main": "app.js",
   "type": "module",
   "scripts": {
-    "test": "jest",
-    "test:watch": "npm run test -- --watch",
-    "dev": "nodemon app.js"
+    "test": "jest --testTimeout=10000 --force-exit --detectOpenHandles --silent",
+    "test:jsmodule": "node --experimental-vm-modules jest --verbose --silent",
+    "dev": "nodemon server.js"
   },
   "author": "89675-Gil, 89768-Gutierrez, 97848-Witt",
   "license": "ISC",
+  "babel": {
+    "presets": [
+      "@babel/preset-env"
+    ]
+  },
   "dependencies": {
     "aa-sqlite": "^1.0.29",
     "bcrypt": "^5.1.1",
@@ -23,6 +28,9 @@
     "winston": "^3.13.0"
   },
   "devDependencies": {
+    "@babel/core": "^7.24.6",
+    "@babel/preset-env": "^7.24.6",
+    "babel-jest": "^29.7.0",
     "jest": "^29.7.0",
     "nodemon": "^3.1.1",
     "supertest": "^7.0.0"
