Inicio de validadción de respuestas (terminar)

--- a/backend/.env
+++ b/backend/.env
@@ -7,4 +7,4 @@ DB_DIALECT=sqlite
 # JWT
 ACCESS_TOKEN_SECRET=accesstokensecret
 REFRESH_TOKEN_SECRET=refreshtokensecret
-ACCESS_TOKEN_EXPIRATION=1440m # 1 día
+ACCESS_TOKEN_EXPIRATION=1440m
