--- a/backend/.env
+++ b/backend/.env
@@ -5,6 +5,6 @@ DB_NAME=data/peliculas.db
 DB_DIALECT=sqlite
 
 # JWT
-ACCESS_TOKEN_SECRET=accesstokensecret
-REFRESH_TOKEN_SECRET=refreshtokensecret
-ACCESS_TOKEN_EXPIRATION=1000
+ACCESS_TOKEN_SECRET=a
+REFRESH_TOKEN_SECRET=a
+ACCESS_TOKEN_EXPIRATION=10000
